BUGFIX: #4082 - Translatable CMS fields layout broken in IE6
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/branches/2.3@77111 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/cms_right.css
+++ b/css/cms_right.css
@@ -413,10 +413,10 @@ div.filterBox {
 /**
  * i18n
  */
-div.originallang_holder.field.CompositeField.nolabel {
+.right form div.originallang_holder {
 	border: 1px dashed #aaa;
 	margin-bottom: 10px; 
-	margin-left: 0;
+	margin-left: 0 !important;
 	padding: 8px 0 6px 5px;
 }
 
@@ -426,14 +426,14 @@ div.originallang_holder.field.CompositeField.nolabel {
 	font-style: italic;
 }
 
-.right form .field.CompositeField .originallang label.left,
-.right form .field.CompositeField.originallang_holder label.left {
-	margin-left: 0;
-	width: auto;
-	float: none;
+.right form .CompositeField .originallang label.left,
+.right form div.originallang_holder label.left {
+	margin-left: 0 !important;
+	width: auto !important;
+	float: none !important;
 }
 
-.right form div.field.CompositeField .originallang .middleColumn {
+.right form div.CompositeField .originallang .middleColumn {
 	clear: left;
 }
 
@@ -443,7 +443,7 @@ div.originallang_holder.field.CompositeField.nolabel {
 	padding-right: 4px;
 }
 
-.right form .field.createTranslationButton .middleColumn {
+.right form .createTranslationButton .middleColumn {
 	background: none;
 }
 
